# primordial-spirit-predictive

./: .gitignore  Cargo.toml  Dockerfile  agents.md  docker-compose.yml  docker-entrypoint.sh
data/: centroids.json  corpus.txt  corpus_v2.txt  v2_corpus.json  v2_graph_edges.json
docs/: architecture_ideas.md  implementation_plan.md  task.md  walkthrough.md
python/: classify_query.py  download_corpus.py  gpu_utils.py  ingest.py  ingest_wiki.py  minillm_wrapper.py  requirements.txt  sentence_queue.py  train_centroids.py  train_pipeline.py  v2_ingest.py  v3_ingest.py
src/: classify.rs  db.rs  graph.rs  ingest.rs  lib.rs  main.rs  reasoning.rs  spatial.rs  walk.rs
tests/: classify_tests.rs  ingest_tests.rs  walk_tests.rs
webui/: server.py
webui/templates/: index.html
